--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
+    "fontawesome": "^5.6.3",
     "scss": "^0.2.4",
     "vue": "^3.2.47"
   }
