--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "vite": "^4.3.5"
   },
   "dependencies": {
+    "@vitejs/plugin-vue": "^4.2.1",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "fontawesome": "^5.6.3",
+    "sass": "^1.62.1",
     "scss": "^0.2.4",
     "vue": "^3.2.47"
   }
